<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/txt_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/drawer_perfil" />

        <item
            android:id="@+id/txt_mensagens"
            android:icon="@drawable/ic_mensagem"
            android:title="@string/drawer_mensagens" />

        <item
            android:id="@+id/txt_definicoes"
            android:icon="@drawable/ic_perfil"
            android:title="@string/drawer_definicoes" />

        <item
            android:id="@+id/txt_acerca"
            android:title="Acerca"
            android:icon="@drawable/ic_assignment"/>

        <item
            android:id="@+id/txt_ajuda"
            android:title="@string/bottom_ajuda"
            android:icon="@drawable/ic_help"/>


        <item
            android:id="@+id/txt_sair"
            android:icon="@drawable/ic_sair"
            android:title="@string/drawer_sair" />
    </group>



</menu>
