<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    android:orientation="vertical"
    tools:context="com.afrofx.code.anjesgf.Activities.RegisterActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:clickable="true"
                    android:id="@+id/add_photo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_add_photo"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_foto"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_nome_completo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:hint="@string/hint_nome_completo"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:inputType="phone"
                    android:hint="@string/hint_numero_telefone" />

                <EditText
                    android:id="@+id/edit_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:hint="@string/hint_pin"
                    android:inputType="numberPassword"
                    android:maxLength="4" />

                <EditText
                    android:id="@+id/edit_repetir_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:inputType="numberPassword"
                    android:background="@drawable/edit_style"
                    android:hint="@string/hint_repetir_pin"
                    android:maxLength="4" />

                <Button
                    android:id="@+id/but_registar"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/but_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/but_style_red"
                    android:clickable="true"
                    android:text="@string/but_registar"
                    android:textColor="@color/txt_white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>

</LinearLayout>