<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.afrofx.code.anjesgf.Activities.LoginActivity"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/cinza"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_keys" />

            <EditText
                android:id="@+id/edit_login_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_style"
                android:hint="@string/hint_numero_telefone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_login_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_style"
                android:hint="@string/hint_pin"
                android:inputType="numberPassword"
                android:maxLength="4" />

            <Button
                android:id="@+id/but_login_entrar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/but_size"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/but_style_red"
                android:text="@string/but_entrar"
                android:textColor="@color/txt_white" />

            <TextView
                android:id="@+id/txt_recuperar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/link_recuperar_senha"
                android:textColor="#212121"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"

            android:text="@string/txt_login"
            android:textAlignment="center"
            android:textColor="@color/but_white" />

        <Button
            android:id="@+id/but_login_registar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/but_size"
            android:layout_gravity="center"
            android:background="@drawable/but_style_white"
            android:text="@string/but_registar"
            android:layout_marginTop="10dp"
            android:textColor="@color/txt_black" />
    </LinearLayout>
</LinearLayout>